# pCAMAL

./: .gitattributes  README
design/: bisected_cyl.pcamal.g  file-format.txt
design/bisected/: README
design/bisected/src/: CMakeLists.txt  bisected-file.cpp  bisected_cyl.pcamal.jou  bisected_cyl.sat
design/pcamal_test/: README
design/pcamal_test/src/: CMakeLists.txt  PCExodusFile.cpp  PCExodusFile.hpp  PCSweepVolume.cpp  PCSweepVolume.hpp  pcamal_test.cpp
examples/1024cubes/: 1024cubes.jou  1024cubes.pcamal.g  catalyst.sh
examples/bisected_cyl_2_procs/: baseline_meshed_bisected_cyl.vol001.g  baseline_meshed_bisected_cyl.vol002.g  bisected_cyl.pcamal.g  catalyst_bisected_cyl.sh  run_bisected_cyl_1_procs.sh  run_bisected_cyl_2_procs.sh
examples/cubes/: 0001cube.pcamal.g  0002cubes.pcamal.g  0004cubes.pcamal.g  0008cubes.pcamal.g  0016cubes.pcamal.g  0032cubes.pcamal.g  0064cubes.pcamal.g  0256cubes.pcamal.g  0512cubes.pcamal.g
examples/cubes/128cubes/: 128cubes.pcamal.g  128cubes.sh
examples/cubes/data_files/: const_load.txt  decr_load.txt
examples/cubes/dense_cubes/: 001cube.pcamal.g  002cubes.pcamal.g  004cubes.pcamal.g  008cubes.pcamal.g  016cubes.pcamal.g  032cubes.pcamal.g  064cubes.pcamal.g  128cubes.pcamal.g
examples/cubes/journal_files/: cubes.jou  intermediatecubes.jou
examples/cubes/million_el_cubes/: 002cubes.pcamal.g  004cubes.pcamal.g  008cubes.pcamal.g  032cubes.pcamal.g
examples/inl/: catalyst_inl.sh  coarse_reactor.pcamal.g  dense_reactor.pcamal.g  inl-dense-size.jou  inl-fine-size.jou  inl-model.jou  run_inl_2_procs.sh
examples/million_elem_cubes/: 001cube.pcamal.g  016cubes.pcamal.g  cubes_script.sh  thru_32.jou
src/: CMakeLists.txt  HexMeshQuality.cpp  HexMeshQuality.hpp  HexQuality.cpp  HexQuality.hpp  Makefile  PCExodusFile.cpp  PCExodusFile.hpp  PCHexMeshQuality.cpp  PCHexMeshQuality.hpp  PCHexQuality.cpp  PCHexQuality.hpp  PCSweepVolume.cpp  PCSweepVolume.hpp  pcamal_proto.c  pcamal_proto.cpp
utilities/exodus/exodus-4.01/include/: exodusII.h  exodusII_int.h
utilities/metis/include/: defs.h  macros.h  metis.h  proto.h  rename.h  struct.h
utilities/metis/metis-4.0/: CMakeLists.txt  metis.hpp
utilities/metis/metis-4.0/Lib/: CMakeLists.txt  balance.c  bucketsort.c  ccgraph.c  coarsen.c  compress.c  debug.c  defs.h  estmem.c  fm.c  fortran.c  frename.c  graph.c  initpart.c  kmetis.c  kvmetis.c  kwayfm.c  kwayrefine.c  kwayvolfm.c  kwayvolrefine.c  macros.h  match.c  mbalance.c  mbalance2.c  mcoarsen.c  memory.c  mesh.c  meshpart.c  metis.h  mfm.c  mfm2.c  mincover.c  minitpart.c  minitpart2.c  mkmetis.c  mkwayfmh.c  mkwayrefine.c  mmatch.c  mmd.c  mpmetis.c  (+19 more)
utilities/metis/metis-4.0/Programs/: CMakeLists.txt  graphchk.c  io.c  kmetis.c  mesh2dual.c  mesh2nodal.c  oemetis.c  onmetis.c  partdmesh.c  partnmesh.c  pmetis.c  smbfactor.c
utilities/metis/metis-4.0/Test/: CMakeLists.txt  mtest.c
utilities/netcdf-3.4.snl3/include/: netcdf.h
