PROJECT (pcamal_proto)

SET (PCAMAL_SRCS pcamal_proto.c)

SET (PCAMAL_MPI_LIBRARY CACHE FILEPATH
     "MPI library.")

SET (PCAMAL_MPI_INCLUDE CACHE FILEPATH
     "MPI include directory.")

INCLUDE_DIRECTORIES(${PCAMAL_MPI_INCLUDE})

ADD_EXECUTABLE (pcamal_proto ${PCAMAL_SRCS})

TARGET_LINK_LIBRARIES (pcamal_proto ${PCAMAL_MPI_LIBRARY})
